# wb_api_test

./: .dockerignore  .env.example  Dockerfile  Dockerfile_test  README.md  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  pre-commit.yaml
infra/: docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-test.yaml  docker-compose.yaml
src/app/: constants.py  endpoints.py  main.py  schemes.py  service.py
src/app/db/: __init__.py  basemodels.py  database.py  models.py
src/app/db/alembic/: env.py
src/app/db/alembic/versions/: 12c3a7d9ef12_.py  2f136d4a5a1c_.py
src/app/service/: __init__.py  scheduler.py  service.py
src/config/: config.py  config.yaml
src/tests/integration/: conftest.py  test_api.py
